add timestamp and get internal and aux voltage

--- a/roboteq_diff_msgs/CMakeLists.txt
+++ b/roboteq_diff_msgs/CMakeLists.txt
@@ -11,6 +11,7 @@ add_message_files(FILES
                   Quaternion.msg
                   Pose.msg
                   Twist.msg
+                  Float64Stamped.msg
                  )
 
 add_service_files(FILES
