--- a/roboteq_diff_driver/config/params.yaml
+++ b/roboteq_diff_driver/config/params.yaml
@@ -7,28 +7,28 @@ base_frame: base_footprint #$(arg prefix)base_footprint
 # specify cmd_vel topic
 cmdvel_topic: cmd_vel
 # specify port for roboteq controller
-port: /dev/ttyS2
+port: /dev/ttyACM0
 # specify baud for roboteq controller
 baud: 115200
 # specify whether to use open-loop motor speed control (as opposed to closed-loop)
 open_loop: false
 # specify robot wheel circumference (perimeter) in meters  (for r=0.151 meters)
-wheel_circumference: 0.973894
+wheel_circumference: 0.3829
 # specify robot track width in meters
 track_width: 0.91
 # specify pulse-per-revolution for motor encoders for wheel rotation
-encoder_ppr: 500
-# specify counts-per-revolution for motor encoders for wheel rotation (ppr*4 for quadrature encoders)
-encoder_cpr: 383067
+encoder_ppr: 6
+# specify counts-per-revolution for motor encoders for wheel rotation (hall_states*reduction_ratio*pole_pairs for hall sensors)
+encoder_cpr: 4368
 # specify maximum motor current (amps)
-max_amps: 10.0
+max_amps: 4.5
 # specify maximum motor speed (rpm)
-max_rpm: 3500
+max_rpm: 4450
 # specify reduction ratio, if there is no put 1
-reduction_ratio: 191.533
+reduction_ratio: 91
 # specify reduction maximum linear velocity (m/s)
-max_vel: 0.35
+max_vel: 0.28  # 17 m/min
 # specify maximum acceleration (rpm/s)
-max_accel: 8000
+max_accel: 15000
 # specify maximum deceleration (rpm/s)
-max_decel: 8000
+max_decel: 20000
